--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/rajdhani": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-auth-session": "~3.6.1",
     "expo-font": "~10.1.0",
     "expo-linear-gradient": "~11.3.0",
+    "expo-random": "~12.2.0",
     "expo-splash-screen": "^0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -30,6 +36,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
