--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "npx jetify"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
@@ -43,6 +44,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "jetifier": "^2.0.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
